# rokin

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  LICENSE  README.md
.agents/skills/comment-conventions/: SKILL.md
.agents/skills/git-conventions/: SKILL.md
.agents/skills/go-design/: SKILL.md
.agents/skills/nextjs-design/: SKILL.md
.agents/skills/ros2-design/: SKILL.md
.agents/skills/spring-design/: SKILL.md  test-conventions.md
.agents/workflows/: run-spring.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
infra/: README.md  docker-compose.yml
infra/kafka/: topic-init.sh
ros/: Dockerfile  README.md
ros/src/fake_robot/: README.md  package.xml  setup.cfg  setup.py
ros/src/fake_robot/config/: default_params.yaml
ros/src/fake_robot/fake_robot/: logic.py  main_node.py
ros/src/fake_robot/launch/: demo.launch.py
ros/src/ros_kafka_bridge/: package.xml  setup.cfg  setup.py
ros/src/ros_kafka_bridge/config/: bridge_config.yaml
ros/src/ros_kafka_bridge/launch/: bridge.launch.py  full_demo.launch.py
ros/src/ros_kafka_bridge/ros_kafka_bridge/: bridge_node.py  consumer.py  producer.py
scripts/: build-worker-go.sh  dev.sh  reset-test-env.sh  test-worker-go.sh
services/api-spring/: Dockerfile  README.md  build.gradle
services/dashboard-next/: next.config.ts  package.json  pnpm-lock.yaml
services/dashboard-next/src/app/: globals.css  layout.tsx  page.tsx
services/dashboard-next/src/lib/: utils.ts
services/worker-go/: Dockerfile  go.mod  go.sum
(+106 files in other folders)
